--- a/index.html
+++ b/index.html
@@ -6,15 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jhames Martin - Portfolio</title>
     <link rel="stylesheet" href="main.css" />
-    <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS styling -->
     <style>
  body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #121212;
-    /* Dark background */
     color: #e0e0e0;
     padding: 20px;
 }
@@ -26,15 +22,13 @@
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.7);
     max-width: 600px;
     width: 100%;
-    margin: 20px auto; /* Center the form container */
+    margin: 20px auto;
 }
-
 .contact-form label {
     font-weight: bold;
     margin-top: 10px;
     display: block;
 }
-
 .contact-form input[type="text"],
 .contact-form input[type="email"],
 .contact-form textarea {
@@ -49,14 +43,12 @@
     background: #2a2a2a;
     color: #e0e0e0;
 }
-
 .contact-form input[type="text"]:focus,
 .contact-form input[type="email"]:focus,
 .contact-form textarea:focus {
     border-color: #0288d1;
     outline: none;
 }
-
 #my-form-button {
     background: linear-gradient(to right, #00c6ff, #0072ff);
     border: none;
@@ -67,17 +59,14 @@
     transition: background 0.3s ease, transform 0.3s ease;
     border-radius: 25px;
 }
-
 #my-form-button:hover {
     background: linear-gradient(to right, #0072ff, #00c6ff);
     transform: scale(1.05);
 }
-
 #my-form-status {
     margin-top: 10px;
     font-size: 14px;
 }
-
 #logo {
     font-size: 2.5rem;
     font-weight: bold;
@@ -86,28 +75,23 @@
     color: #03a9f4;
     transition: color 0.3s ease;
 }
-
 #logo a {
     text-decoration: none;
     color: #03a9f4;
 }
-
 #logo a:hover {
     color: #0288d1;
 }
-
 .container {
     margin: 0 auto;
     max-width: 100%;
     width: 70em;
 }
-
 @media screen and (max-width: 1680px) {
     .container {
         width: 68em;
     }
 }
-
 .content {
     max-width: 800px;
     margin: 0 auto;
@@ -115,7 +99,6 @@
     color: #e0e0e0;
     padding: 20px;
 }
-
 p.subtitle {
     text-align: center;
     font-size: 1.2em;
@@ -123,7 +106,6 @@ p.subtitle {
     font-weight: bold;
     color: #03a9f4;
 }
-
 img.profile-img {
     display: block;
     margin: 0 auto;
@@ -153,102 +135,11 @@ img.profile-img {
     transform: scale(1.05);
     box-shadow: 0 12px 20px rgba(0, 114, 255, 0.7);
 }
-
-.skills-list {
-    margin-top: 20px;
-}
-
-.skills-list li {
-    list-style-type: none;
-    margin-bottom: 10px;
-}
-
-.skills-list li:before {
-    content: "\2022";
-    color: #03a9f4;
-    font-weight: bold;
-    display: inline-block;
-    width: 1em;
-    margin-left: -1em;
-}
-
-.portfolio-item {
-    margin-bottom: 30px;
-}
-
-.portfolio-item img {
-    max-width: 100%;
-    border-radius: 25px;
-}
-
-.portfolio-item .description {
-    margin-top: 10px;
-}
-
-.contact-form {
-    display: none;
-    margin-top: 30px;
-}
-
-.form-control {
-    border-radius: 5px;
-}
-
-.invalid-feedback {
-    display: none;
-    color: red;
-}
-
-.is-invalid {
-    border-color: red;
-}
-
-/* Animation */
-.fade-in {
-    animation: fadeIn 0.5s ease forwards;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-.fade-out {
-    animation: fadeOut 0.5s ease forwards;
-}
-
-@keyframes fadeOut {
-    from {
-        opacity: 1;
-    }
-
-    to {
-        opacity: 0;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .btn-primary {
-        padding: 15px 20px; /* Adjust padding for smaller screens */
-        font-size: 16px;
-    }
-
-    #contact-container {
-        padding: 20px 10px; /* Adjust padding for smaller screens */
-    }
-}
-
     </style>
 </head>
 
 <body>
     <section id="header" style="background-color: #121212;">
-        <!-- Logo -->
         <h1 id="logo"><a href="#">JHAMES MARTIN</a></h1>
     </section>
 
