--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ img.profile-img {
 
 <body>
     <section id="header" style="background-color: #121212;">
-        <h1 id="logo"><a href="#">JHAMES MARTIN</a></h1>
+        <h1 id="logo"><a href="https://www.facebook.com/profile.php?id=61555934608413">JHAMES MARTIN</a></h1>
     </section>
 
     <div class="content">
@@ -148,10 +148,10 @@ img.profile-img {
         <p class="subtitle">Hello, I'm Jhames Martin, a passionate front-end developer and graphic designer. I am making visually stunning images that bring ideas to life.</p>
         <h3>Skills:</h3>
         <ul class="skills-list">
-            <li>HTML5</li>
-            <li>CSS3</li>
+            <li>HTML</li>
+            <li>CSS</li>
             <li>JavaScript</li>
-            <li>Bootstrap</li>
+            <li>PHP</li>
             <li>Adobe Photoshop</li>
             <li>Mobile Editing</li>
             <li>Video Editing</li>
